managed to correct my mistakes. need to keep working on mobile responsiveness

--- a/css/1-base/_common.sass
+++ b/css/1-base/_common.sass
@@ -1,6 +1,5 @@
 body
   font-family: $open-slab
-  margin-left: 0px
 
 h1,h2,h3,h4,h5,h6
   font-family: $open-slab
@@ -10,11 +9,12 @@ h1,h2,h3,h6
 
 h1, h2
   font-size: 4em
+  padding: 20px
   @media screen and (max-width: 767px)
     font-size: 2em
 
 h1
-  margin-top: 50px
+  margin-top: 70px
   @media screen and (max-width: 767px)
     margin-top: 0px
 
@@ -30,9 +30,6 @@ h3
 
 h4
   padding: 20px
-  @media screen and (max-width: 767px)
-    margin-bottom: 50px
-    padding-left: 0px
 
 h5
   font-size: 0.75em
@@ -51,10 +48,7 @@ a
 .container
   max-width: 2000px
   margin-left: 0
-  position: relative
   top: -1000px
-    @media screen and (max-width: 767px)
-      margin-right: 0
 
 .fa
   padding: 10px
@@ -66,8 +60,6 @@ a
   color: white
   +clearfix
   width: 100%
-  margin-left: 0px
-
 
 .option
   text-align: center
@@ -87,19 +79,17 @@ a
   @include grid-column(12)
   min-height: 200px
   width: 100%
-  margin-left: 0px
 
 .branding
   top: -50px
   text-align: right
   position: relative
   z-index: -1
-  padding-right: 0px
+  padding-right: -40px
   bottom: -250px
   object
       width: 600px
       height: 500px
       @media screen and (max-width: 767px)
-        width: 400px
+        width: 300px
         height: 300px
-        top: 100px
